--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.19.2",
     "http-status-codes": "^2.3.0",
     "mongoose": "^8.4.1",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.3"
   }
 }
