--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "http-status-codes": "^2.3.0",
     "mongoose": "^8.4.1",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^3.1.3"
+    "nodemon": "^3.1.3",
+    "vercel": "^34.2.7"
   }
 }
