--- a/vercel.json
+++ b/vercel.json
@@ -8,9 +8,10 @@
     ],
     "routes": [
       {
-        "src": "/api/v1/*/*(.*)",
+        "src": "/(.*)",
         "dest": "/app.js"
       }
     ]
   }
+  
   
