--- a/vercel.json
+++ b/vercel.json
@@ -13,7 +13,7 @@
       },
       {
         "src": "/api/v1/AssignLead/(.*)",
-        "dest": "/router/AssignLead.routes.js"
+        "dest": "/controllers/AssignLead.controllers.js"
       }
       ,
       {
