--- a/vercel.json
+++ b/vercel.json
@@ -8,7 +8,7 @@
     ],
     "routes": [
       {
-        "src": "/api/v1/**/*.js",
+        "src": "/api/v1/**/(*.)",
         "dest": "/app.js"
       }
     ]
