--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,14 @@
     "version": 2,
     "builds": [
       {
-        "src": "index.js",
+        "src": "*.js",
         "use": "@vercel/node"
       }
     ],
     "routes": [
       {
-        "src": "/api/v1/**/(*.)",
-        "dest": "/app.js"
+        "src": "/(.*)",
+        "dest": "/"
       }
     ]
   }
